@@ -1,3 +1,11 @@
+2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	Fixes #356076
+
+	Patch by Brian Cameron <brian.cameron@sun.com>
+
+	* gnome-about-me.c (about_me_update_photo): fixed compilation on Solaris.
+
 2007-01-06  Hiroyuki Ikezoe <poincare@ikezoe.net>
 
 	Fixes #343584 (patch from Evolution)
